-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0
-
Mac OS X 10.11.5
-
-
2ff1557937c398a7fb5cc7ba120e7ca3b5eacd36
I'm trying out the newly released 5.7.0 on Mac but found this weird annoying bug. When I press return on a QLineEdit, it produces a sound! It's getting annoying very quickly on me.
To reproduce, just try any Qt app built with 5.7.0, even the new Qt Creator 4.0.2. Type something in a line edit box and press return key. It beeps. This is a show stopper for me to update my apps with 5.7.0
- relates to
-
QTBUG-92154 [macOS] Every key stroke beeps with AA_PluginApplication
-
- Open
-
For Gerrit Dashboard: QTBUG-54211 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
163467,4 | Cocoa: Don’t beep on return keypress | 5.7 | qt/qtbase | Status: MERGED | +2 | 0 |